--- a/app/src/main/res/layout/allmenu_recycler_items.xml
+++ b/app/src/main/res/layout/allmenu_recycler_items.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/popular_image_iv"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/recycler_bg2">
 
 
     <ImageView
@@ -58,8 +59,8 @@
 
     <TextView
         android:id="@+id/popular_deliveryTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="31dp"
+        android:layout_height="15dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:background="@drawable/time_bg"
@@ -69,4 +70,32 @@
         app:layout_constraintBottom_toBottomOf="@+id/popular_rating"
         app:layout_constraintStart_toEndOf="@+id/popular_rating"
         app:layout_constraintTop_toTopOf="@+id/popular_rating" />
+
+    <TextView
+        android:id="@+id/popular_delivery_charge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:text="Free Delivery"
+        android:textSize="10sp"
+        app:layout_constraintBottom_toBottomOf="@+id/popular_deliveryTime"
+        app:layout_constraintStart_toEndOf="@+id/popular_deliveryTime"
+        app:layout_constraintTop_toTopOf="@+id/popular_deliveryTime" />
+
+    <TextView
+        android:id="@+id/popular_price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
+        android:fontFamily="@font/open_sans_bold"
+        android:text="166"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
