--- a/app/src/main/res/layout/popula_recycler_items.xml
+++ b/app/src/main/res/layout/popula_recycler_items.xml
@@ -10,7 +10,10 @@
         android:id="@+id/popular_image"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_marginEnd="311dp"
+        android:layout_marginRight="311dp"
         android:layout_weight="1"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/popular1" />
