--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent">/>
+<androidx.constraintlayout.widget.ConstraintLayout
     android:id="@+id/tvMostRecomenedfood"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -120,3 +124,4 @@
         app:layout_constraintTop_toBottomOf="@+id/allMenu_items" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
