--- a/app/src/main/res/layout/activity_food_details.xml
+++ b/app/src/main/res/layout/activity_food_details.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".FoodDetails">
-
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
@@ -17,7 +17,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_baseline_arrow_back_24"
         tools:ignore="VectorDrawableCompat" />
-
     <ImageView
         android:id="@+id/imageView5"
         android:layout_width="wrap_content"
@@ -29,7 +28,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/shopping_cart"
         tools:ignore="VectorDrawableCompat" />
-
     <ImageView
         android:id="@+id/imageView7"
         android:layout_width="0dp"
@@ -40,7 +38,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
         app:srcCompat="@drawable/recommended1" />
-
     <TextView
         android:id="@+id/name"
         android:layout_width="wrap_content"
@@ -49,12 +46,11 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/open_sans_bold"
-        android:text="Kuku Special"
+        android:text="@string/kuku_special"
         android:textColor="#333333"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView7" />
-
     <RatingBar
         android:id="@+id/ratingBar"
         android:layout_width="240dp"
@@ -63,7 +59,6 @@
         android:rating="2.5"
         app:layout_constraintStart_toStartOf="@+id/name"
         app:layout_constraintTop_toBottomOf="@+id/name" />
-
     <TextView
         android:id="@+id/rating"
         android:layout_width="wrap_content"
@@ -74,7 +69,6 @@
         app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
         app:layout_constraintStart_toEndOf="@+id/ratingBar"
         app:layout_constraintTop_toTopOf="@+id/ratingBar" />
-
     <ImageView
         android:id="@+id/imageView8"
         android:layout_width="wrap_content"
@@ -86,7 +80,6 @@
         app:layout_constraintTop_toTopOf="@+id/name"
         app:srcCompat="@drawable/ic_like"
         tools:ignore="VectorDrawableCompat" />
-
     <TextView
         android:id="@+id/price"
         android:layout_width="wrap_content"
@@ -100,16 +93,17 @@
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ratingBar" />
-
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:layout_marginLeft="16dp"
         android:text="Products Description "
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/price" />
-
+        app:layout_constraintTop_toBottomOf="@+id/price"
+        tools:ignore="HardcodedText"
+        android:layout_marginStart="16dp" />
     <Button
         android:id="@+id/button"
         android:layout_width="0dp"
@@ -121,7 +115,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/add_to_cart_bg"
         android:fontFamily="@font/open_sans_bold"
-        android:text="Add to Cart"
+        android:text="@string/add_to_cart"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:backgroundTint="@color/design_default_color_secondary"
